Bug 155017 - Crash when closing an HTML in a debug build
Summary: Crash when closing an HTML in a debug build
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer Web (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: Crash
  Show dependency treegraph
 
Reported: 2023-04-25 17:57 UTC by Mike Kaganski
Modified: 2023-04-26 09:13 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Crashes on close (189 bytes, text/html)
2023-04-25 17:57 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-04-25 17:57:37 UTC
Created attachment 186925 [details]
Crashes on close

Open the attached HTML in Writer, then close.
In my debug build of master on Windows, it crashes.
Comment 1 Mike Kaganski 2023-04-25 19:18:15 UTC
https://gerrit.libreoffice.org/c/core/+/151003
Comment 2 Roman Kuznetsov 2023-04-25 19:23:26 UTC
no crash in non debug current TDF's 7.6 build
Comment 3 Stéphane Guillou (stragu) 2023-04-25 21:07:46 UTC
Confirmed crash with debug build, with both Normal and Web views:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3ec73488e447a693a14a773a7fb96938036c0324
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2023-04-26 04:41:38 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/271f17a6022c64cbbe9befbc66a9eaaa0567d569

tdf#155017: make sure that the correct shell is popped from SfxDispatcher

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-04-26 09:13:29 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/57a676cf951eaa65831b32b080cf3da013bf60fb

Related: tdf#155017 Stop after the first pop in case the shell was not on stack

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.